@@ -1,88 +1,101 @@
 package com.blackmarkpet.restapi.controller;
 
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-
+import com.blackmarkpet.restapi.dto.AgregarItemRequestDTO; // ¡Importante! Importamos el nuevo DTO.
 import com.blackmarkpet.restapi.dto.ItemCarritoDTO;
+import com.blackmarkpet.restapi.dto.ProductoDTO;
 import com.blackmarkpet.restapi.model.Carrito;
 import com.blackmarkpet.restapi.model.ItemCarrito;
 import com.blackmarkpet.restapi.model.Producto;
 import com.blackmarkpet.restapi.model.Usuario;
 import com.blackmarkpet.restapi.repository.CarritoRepository;
+import com.blackmarkpet.restapi.repository.ItemCarritoRepository;
 import com.blackmarkpet.restapi.repository.ProductoRepository;
 import com.blackmarkpet.restapi.repository.UsuarioRepository;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.*;
 
+import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
-import java.util.*;
 
 @RestController
 @RequestMapping("/api/carrito")
 @CrossOrigin(origins = "*")
 public class CarritoController {
 
-    @Autowired private CarritoRepository carritoRepository;
-    @Autowired private UsuarioRepository usuarioRepository;
-    @Autowired private ProductoRepository productoRepository;
+    @Autowired
+    private CarritoRepository carritoRepository;
+    @Autowired
+    private UsuarioRepository usuarioRepository;
+    @Autowired
+    private ProductoRepository productoRepository;
+    @Autowired
+    private ItemCarritoRepository itemCarritoRepository;
 
-    // YA NO NECESITAMOS LA CLASE DTO AQUÍ. ¡MÁS LIMPIO!
-
-    // OBTENER EL CARRITO DE UN USUARIO
     @GetMapping("/{usuarioId}")
     public ResponseEntity<List<ItemCarritoDTO>> getCarrito(@PathVariable Long usuarioId) {
-        Carrito carrito = carritoRepository.findByUsuarioId(usuarioId).orElse(null);
-        if (carrito == null) {
-            return ResponseEntity.ok(Collections.emptyList());
+        Optional<Carrito> carritoOpt = carritoRepository.findByUsuarioId(usuarioId);
+        if (carritoOpt.isEmpty()) {
+            return ResponseEntity.ok(List.of());
         }
-        // La lógica sigue siendo la misma, usando el DTO importado
-        List<ItemCarritoDTO> carritoDTO = carrito.getItems().stream().map(ItemCarritoDTO::new).collect(Collectors.toList());
-        return ResponseEntity.ok(carritoDTO);
+        Carrito carrito = carritoOpt.get();
+        List<ItemCarrito> items = itemCarritoRepository.findByCarrito(carrito);
+        List<ItemCarritoDTO> itemDTOs = items.stream().map(item -> {
+            Producto producto = item.getProducto();
+            ProductoDTO productoDTO = new ProductoDTO();
+            productoDTO.setId(producto.getId());
+            productoDTO.setNombre(producto.getNombre());
+            productoDTO.setPrecio(producto.getPrecio());
+            productoDTO.setImageUrl(producto.getImageUrl());
+            ItemCarritoDTO itemDto = new ItemCarritoDTO();
+            itemDto.setId(item.getId());
+            itemDto.setCantidad(item.getCantidad());
+            itemDto.setProducto(productoDTO);
+            return itemDto;
+        }).collect(Collectors.toList());
+        return ResponseEntity.ok(itemDTOs);
     }
 
-    // AÑADIR UN PRODUCTO AL CARRITO
+    //Agrega un producto al carrito de un usuario.
     @PostMapping("/agregar")
-    public ResponseEntity<List<ItemCarritoDTO>> agregarAlCarrito(@RequestBody Map<String, Long> request) {
-        Long usuarioId = request.get("usuarioId");
-        Long productoId = request.get("productoId");
-        
-        Usuario usuario = usuarioRepository.findById(usuarioId).orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-        Producto producto = productoRepository.findById(productoId).orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+    public ResponseEntity<ItemCarrito> agregarAlCarrito(@RequestBody AgregarItemRequestDTO request) {
+        Optional<Usuario> usuarioOpt = usuarioRepository.findById(request.getUsuarioId());
+        Optional<Producto> productoOpt = productoRepository.findById(request.getProductoId());
 
-        Carrito carrito = carritoRepository.findByUsuarioId(usuarioId).orElseGet(() -> {
+        if (usuarioOpt.isEmpty() || productoOpt.isEmpty()) {
+            return ResponseEntity.badRequest().build();
+        }
+
+        Usuario usuario = usuarioOpt.get();
+        Producto producto = productoOpt.get();
+        Carrito carrito = carritoRepository.findByUsuario(usuario).orElseGet(() -> {
             Carrito nuevoCarrito = new Carrito();
             nuevoCarrito.setUsuario(usuario);
-            return nuevoCarrito;
+            return carritoRepository.save(nuevoCarrito);
         });
 
-        Optional<ItemCarrito> itemExistente = carrito.getItems().stream()
-            .filter(item -> item.getProducto().getId().equals(productoId))
-            .findFirst();
-
+        Optional<ItemCarrito> itemExistente = itemCarritoRepository.findByCarritoAndProducto(carrito, producto);
         if (itemExistente.isPresent()) {
             ItemCarrito item = itemExistente.get();
-            item.setCantidad(item.getCantidad() + 1);
+            item.setCantidad(item.getCantidad() + request.getCantidad());
+            return ResponseEntity.ok(itemCarritoRepository.save(item));
         } else {
             ItemCarrito nuevoItem = new ItemCarrito();
             nuevoItem.setCarrito(carrito);
             nuevoItem.setProducto(producto);
-            nuevoItem.setCantidad(1);
-            carrito.getItems().add(nuevoItem);
+            nuevoItem.setCantidad(request.getCantidad());
+            return ResponseEntity.ok(itemCarritoRepository.save(nuevoItem));
         }
-
-        carritoRepository.save(carrito);
-
-        return getCarrito(usuarioId);
     }
 
-    // ELIMINAR UN ITEM DEL CARRITO
     @DeleteMapping("/eliminar/{itemId}")
-    public ResponseEntity<Void> eliminarDelCarrito(@PathVariable Long itemId, @RequestParam Long usuarioId) {
-        Carrito carrito = carritoRepository.findByUsuarioId(usuarioId).orElseThrow(() -> new RuntimeException("Carrito no encontrado"));
-        
-        carrito.getItems().removeIf(item -> item.getId().equals(itemId));
-        
-        carritoRepository.save(carrito);
-        
-        return ResponseEntity.ok().build();
+    public ResponseEntity<Void> eliminarDelCarrito(@PathVariable Long itemId) {
+        if (itemCarritoRepository.existsById(itemId)) {
+            itemCarritoRepository.deleteById(itemId);
+            return ResponseEntity.ok().build();
+        } else {
+            return ResponseEntity.notFound().build();
+        }
     }
 }
